2014-October-20, Ulf Griesmann
- fix help text of gdsii_ptext.m; argument 'noel' no longer
  exists.
- eliminate omakemex.m; makemex.m is also used on Octave/Windows
- rotation angle in degrees in 'gdsii_grating.m'.
- replace gdsint --> intmax_t

2014-September-27, Ulf Griesmann
- version 118d
- final version before git version control.

2014-September-26, Ulf Griesmann
- version 118c
- more extensive example in the help text of
  @gds_structure/add_ref.m
- fixed an error in an error message in @gds_structure/add_element.m
  and replaced for ... --> cellfun.
- replaced for ... --> cellfun in @gds_library/add_struct.m

2014-September-19, Ulf Griesmann
- version 118b
- more argument checking in @gds_library/write_gds_library.m method.
- fix another small bug in @gds_library/write_gds_library.m method: library
  info is always displayed when verbose > 0.

2014-August-30, Ulf Griesmann
- version 118a
- close all glyph polygons in Elements/gdsii_ptext.m
- removed calls to 'floor' in poly_boolmex.cpp

2014-July-02, Ulf Griesmann
- version 117a
- use 'cputime' instead of 'now' to measure read
  and write times.
- make @gds_structure/add_element.m and @gds_library/add_structure.m more flexible
  by allowing variable length argument lists. Lets the user express adding of multiple 
  elements to structures, and multiple structures to libraries, much more succinctly.
- add a Greek \mu to the character set in gdsii_ptext.m as char(127).

2014-June-2, Ulf Griesmann
- version 116h
- fixed a bug in processing of the varargin cell array in the
  gds_library.m constructor (thanks to N. Ayotte).

2014-May-28, Ulf Griesmann
- version 116g
- clarified the Licenses for all files in the toolbox
  in file README.

2014-May-18, Ulf Griesmann
- version 116f
- eliminated field 'numel' from gds_structure objects and
  field 'numst' from gds_library objects. Not needed because
  cell arrays "know" how many elements they have. Saves a bit
  of space.

2014-May-17, Ulf Griesmann